--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "express-flash": "^0.0.2",
     "express-session": "^1.17.2",
     "joi": "^17.4.2",
+    "joi-objectid": "^4.0.2",
     "mongoose": "^6.0.12",
     "passport": "^0.5.0",
     "passport-local": "^1.0.0",
