--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "express-session": "^1.17.2",
     "joi": "^17.4.2",
     "joi-objectid": "^4.0.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.12",
     "passport": "^0.5.0",
     "passport-local": "^1.0.0",
