--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "passport": "^0.5.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.1.0"
+  },
+  "devDependencies": {
+    "jest": "^27.4.7"
   }
 }
