--- a/package.json
+++ b/package.json
@@ -18,9 +18,13 @@
     "passport-local-mongoose": "^6.1.0"
   },
   "devDependencies": {
-    "jest": "^27.4.7"
+    "chai": "^4.3.4",
+    "chai-as-promised": "^7.1.1",
+    "jest": "^27.4.7",
+    "mocha": "^9.1.4",
+    "supertest": "^6.2.2"
   },
   "scripts": {
     "test": "jest"
-   }
+  }
 }
