--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "nodemon": "^2.0.15",
     "passport": "^0.5.0",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^6.1.0"
+    "passport-local-mongoose": "^6.1.0",
+    "react-router-dom": "^6.2.1"
   },
   "devDependencies": {
     "chai": "^4.3.4",
