--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "passport": "^0.5.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.1.0",
-    "react-router-dom": "^6.2.1"
+    "react-router-dom": "^6.2.1",
+    "react-validation": "^3.0.7",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "chai": "^4.3.4",
